; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/nvmecontrol/extr_nc_util.c_le48dec.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/nvmecontrol/extr_nc_util.c_le48dec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @le48dec(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i32*
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 4
  %8 = call i64 @le16dec(i32* %7)
  %9 = trunc i64 %8 to i32
  %10 = shl i32 %9, 32
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @le32dec(i32* %11)
  %13 = or i32 %10, %12
  ret i32 %13
}

declare dso_local i64 @le16dec(i32*) #1

declare dso_local i32 @le32dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
